Use coverage to run the tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ python:
   - "3.3"
   - "3.4"
   - "nightly"
-install: "pip install -r requirements.txt"
-script: nosetests
+install:
+  - "pip install -r requirements.txt"
+  - "pip install coverage"
+script: coverage run --source=highlander setup.py test
