--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,7 @@ python:
   - "nightly"
 install:
   - "pip install -r requirements.txt"
-  - "pip install coverage"
+  - "pip install coverage coveralls"
 script: coverage run --source=highlander setup.py test
+after_success:
+    coveralls
